api: pass parameters to /button and /finger through POST request body
